Closed Bug 1705208 Opened 3 years ago Closed 3 years ago

Unable to start Firefox (webrender fails and we don't fallback to anything), on a system where my graphics are temporarily horked and e.g. glxgears won't start

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- unaffected
firefox89 --- fixed

People

(Reporter: dholbert, Assigned: aosmond)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

STR:

  1. Get your system into a state where glxgears won't start. [hand-wave]
    I'm not sure how I did this, but this is the state that my Dell laptop (running Ubuntu) is currently in. It may've been a system update that I installed earlier today.

  2. Start Firefox, with gfx.webrender.enabled (e.g. mozregression -- launch [date] --setpref "gfx.webrender.enabled:true")

ACTUAL RESULTS:
No Firefox window appears.

EXPECTED RESULTS:
Firefox should start (in some sort of fallback rendering mode, if possible)

mozregression tells me this started with bug 1701236

Assignee: nobody → aosmond

A user can get stuck trying to use full WebRender accidently when:

  1. They force WR on via a pref.
  2. GfxInfo failed for some reason (e.g. glxtest failed) which denies them permission to use SW-WR.
  3. They are in nightly or early beta, in which case fallback to SW-WR is on, and fallback to Basic is off due to default pref settings.
  4. They fail to initialize WR.
  5. They try to fallback, but SW-WR is disabled, and they cannot fallback to Basic, and thus it retries with WR.
Severity: -- → S3
Priority: -- → P3
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ddeb97eb8555
Force allow fallback to Software WebRender if fallback to Basic is disabled. r=gfx-reviewers,sotaro
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: