Bug 1705208 - Force allow fallback to Software WebRender if fallback to Basic is disabled. r=gfx-reviewers,sotaro

Differential Revision: https://phabricator.services.mozilla.com/D112096